--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
     branches:
       - main
-    workflow_dispatch:  
+    workflow_dispatch:  # Allows manual triggering of the workflow    
       
 jobs:
   terraform:
