--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -4,6 +4,7 @@ on:
   pull_request:
     branches:
       - main
+  workflow_dispatch:  # Allows manual triggering of the workflow
 
 jobs:
   terraform:
@@ -21,14 +22,17 @@ jobs:
         with:
           terraform_version: 1.2.0  # Set to the version you require
 
-      # Initialize Terraform
+      # Initialize Terraform in the src/terraform directory
       - name: Terraform Init
         run: terraform init -input=false
+        working-directory: src/terraform  # Relative path to your Terraform directory
 
       # Format Terraform configuration
       - name: Terraform Format
         run: terraform fmt -check
+        working-directory: src/terraform  # Relative path to your Terraform directory
 
       # Validate Terraform configuration
       - name: Terraform Validate
         run: terraform validate
+        working-directory: src/terraform  # Relative path to your Terraform directory
