--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -27,7 +27,7 @@ jobs:
 
       # Format Terraform configuration
       - name: Terraform Format
-        run: terraform fmt -check
+        run: terraform fmt
 
       # Validate Terraform configuration
       - name: Terraform Validate
